[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powergrid-env"
version = "0.1.0"
description = "PowerGrid OpenEnv simulator"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests"
]
